[package]
name = "rust-grid"
version = "0.1.1"
authors = ["Wait_What_ <me.git@waitwhat.help>"]
edition = "2018"
description = "Very minimal library to store large grids of any type in memory, with a user-friendly interface"
homepage = "https://github.com/wait-what/rust-grid"
repository = "https://github.com/wait-what/rust-grid"
license = "MIT"
keywords = ["gamedev", "graphics", "grid", "2d"]

[dependencies]
